<resources>
    <string name="app_name" translatable="false">chatzam</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Chatzam</string>
    <string name="nav_header_subtitle">app@wornux.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="chats">Chats</string>
    <string name="create_chat">Create chat</string>
    <string name="create_group">Create group</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="type_a_message">Type a message…</string>
    <string name="no_messages_yet">No messages yet.</string>
    <string name="button_to_start_a_new_chat">Button to start a new chat</string>
    <string name="send_message">Send message</string>
    <string name="no_chats_yet_ntap_the_button_to_start_a_conversation">No chats yet.\nTap the + button to start a conversation!</string>
    <string name="create_group_chat">Create Group Chat</string>
    <string name="tap_to_add_chat_photo">Tap to add chat photo</string>
    <string name="tap_to_add_group_photo">Tap to add group photo</string>
    <string name="app_logo">App Logo</string>
    <string name="greeting_message">Welcome to ChatZam</string>
    <string name="connect_with_friends_securely">Connect with friends securely</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="display_name">Display Name</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="don_t_have_an_account_register_here">Don\'t have an account? Register here</string>
    <string name="already_have_an_account_login_here">Already have an account? Login here</string>
    <string name="login_succesful">Login successful!</string>
    <string name="registration_succesful">Registration successful!</string>
    <string name="private_chat">Private Chat</string>
    <string name="group_chat">Group Chat</string>
    <string name="message_sounds">Message Sounds</string>
    <string name="push_notifications">Push Notifications</string>
    <string name="notifications">Notifications</string>
    <string name="privacy">Privacy</string>
    <string name="show_online_status">Show Online Status</string>
    <string name="read_receipts">Read Receipts</string>
    <string name="notification_settings_updated">Notification settings updated</string>
    <string name="sound_settings_updated">Sound settings updated</string>
    <string name="privacy_settings_updated">Privacy settings updated</string>
    <string name="logout">Logout</string>
    <string name="delete_account">Delete Account</string>
    <string name="logout_confirmation_title">Logout?</string>
    <string name="logout_confirmation_message">Are you sure you want to logout?</string>
    <string name="cancel">Cancel</string>
    <string name="group_name">Group name</string>
    <string name="chat_name">Chat name</string>
    <string name="add_members">Add members</string>
    <string name="search_users">Search users…</string>
    <string name="available_users">Available Users</string>
    <string name="clear">Clear</string>
    <string name="search_member">Search member</string>
    <string name="searchbar_hint">john doe</string>
    <string name="save_changes">Save Changes</string>
    <string name="tap_to_change_photo">Tap to change photo</string>
    <string name="account">Account</string>
    <string name="remove_user">Remove user</string>
    <string name="selected_members_0">Selected Members (0)</string>
    <string name="attach_file">Attach file</string>
    <string name="send_image">Send Image</string>
    <string name="uploading_image">Uploading image…</string>
    <string name="image_upload_failed">Failed to upload image</string>
    <string name="permission_denied">Permission denied</string>
    <string name="permission_rationale">Storage permission is needed to select images</string>
    <string name="image_load_error">Failed to load image</string>
    <string name="retry">Retry</string>
</resources>